--- a/assets/index.css
+++ b/assets/index.css
@@ -203,3 +203,38 @@ body {
     min-width: 24px;
     text-align: center;
 }
+#banner {
+    width: 80%;
+    max-width: 1200px;
+    height: 500px;
+    margin: 10px auto;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #ff8fa3;
+    padding: 10px 0;
+    border-radius: 10px;
+    position: relative;
+}
+
+.banner-content {
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
+.banner-img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    opacity: 0;
+    transition: opacity 1s ease-in-out;
+}
+
+.banner-img.active {
+    opacity: 1;
+}
